--- a/player.html
+++ b/player.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="../css/player.css" />
+    <link rel="stylesheet" href="/css/player.css" />
   
     <title>Music Player</title>
   </head>
@@ -65,5 +65,5 @@
     </div>
     
   </body>
-  <script src="../js/player.js" defer></script>
+  <script src="/js/player.js" defer></script>
 </html>
